--- a/package.json
+++ b/package.json
@@ -15,25 +15,31 @@
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "^9.1.3",
-    "@angular/core": "5.2.11",
+    "@angular/core": "^5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/router": "^5.2.11",
     "@capacitor/core": "2.0.1",
+    "@ionic-native/app-preferences": "^4.20.0",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/file": "^4.20.0",
     "@ionic-native/file-transfer": "^4.20.0",
     "@ionic-native/geolocation": "^4.20.0",
     "@ionic-native/http": "^4.20.0",
+    "@ionic-native/native-geocoder": "^4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
     "ionic-angular": "3.9.9",
     "ionic-img-viewer": "^2.9.0",
     "ionic3-image-cache": "^0.1.4",
@@ -47,7 +53,6 @@
     "@ionic/app-scripts": "3.2.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -56,7 +61,9 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      },
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-geolocation": {
@@ -66,10 +73,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "android"
